--- a/habispec/inspec.yml
+++ b/habispec/inspec.yml
@@ -1,8 +1,8 @@
 name: habispec
 title: InSpec Profile
-maintainer: The Authors
-copyright: The Authors
-copyright_email: you@example.com
+maintainer: Nathen Harvey <nharvey@chef.io>
+copyright: Chef Software, Inc.
+copyright_email: nharvey@chef.io
 license: Apache-2.0
 summary: An InSpec Compliance Profile
 version: 0.1.0
